add flashcard template with basic jquery slide functionality.

--- a/index.html
+++ b/index.html
@@ -9,6 +9,10 @@
     <title>Javascript and Jquery Flashcards</title>
   </head>
   <body>
-    
+    <h1>Javascript and Jquery Flashcards</h1>
+    <div class="card">
+      <h2>term</h2>
+      <p>definition</p>
+    </div>
   </body>
 </html>
