Add text content for cards and css styling

--- a/index.html
+++ b/index.html
@@ -8,11 +8,27 @@
     <meta charset="utf-8">
     <title>Javascript and Jquery Flashcards</title>
   </head>
-  <body>
+  <body class="container">
     <h1>Javascript and Jquery Flashcards</h1>
-    <div class="card">
-      <h2>term</h2>
-      <p>definition</p>
+    <div>
+      <h2>Operators</h2>
+      <p>JavaScript operators are used to assign values, compare values, perform arithmetic operations, and more.</p>
+    </div>
+    <div>
+      <h2>Variables</h2>
+      <p>JavaScript variables are containers for storing data values.</p>
+    </div>
+    <div>
+      <h2>Functions</h2>
+      <p>A function is a JavaScript procedure—a set of statements that performs a task or calculates a value. To use a function, you must define it somewhere in the scope from which you wish to call it. See also the exhaustive reference chapter about JavaScript functions to get to know the details.</p>
+    </div>
+    <div>
+      <h2>Arguments</h2>
+      <p>An argument of a function is a specific input in the function, also known as an independent variable. The argument object contains an array of the arguments used when the function was called (invoked).</p>
+    </div>
+    <div>
+      <h2>Parameters</h2>
+      <p>Parameter is variable in the declaration of function.</p>
     </div>
   </body>
 </html>
