add bootstrap panels, fix jquery removeClass bug

--- a/index.html
+++ b/index.html
@@ -10,25 +10,25 @@
   </head>
   <body class="container">
     <h1>Javascript and Jquery Flashcards</h1>
-    <div>
-      <h2>Operators</h2>
-      <p>JavaScript operators are used to assign values, compare values, perform arithmetic operations, and more.</p>
+    <div class="panel">
+      <h2 class="panel-title">Operators</h2>
+      <p class="panel-body">JavaScript operators are used to assign values, compare values, perform arithmetic operations, and more.</p>
     </div>
-    <div>
-      <h2>Variables</h2>
-      <p>JavaScript variables are containers for storing data values.</p>
+    <div class="panel">
+      <h2 class="panel-title">Variables</h2>
+      <p class="panel-body">JavaScript variables are containers for storing data values.</p>
     </div>
-    <div>
-      <h2>Functions</h2>
-      <p>A function is a JavaScript procedure—a set of statements that performs a task or calculates a value. To use a function, you must define it somewhere in the scope from which you wish to call it. See also the exhaustive reference chapter about JavaScript functions to get to know the details.</p>
+    <div class="panel">
+      <h2 class="panel-title">Functions</h2>
+      <p class="panel-body">A function is a JavaScript procedure—a set of statements that performs a task or calculates a value. To use a function, you must define it somewhere in the scope from which you wish to call it. See also the exhaustive reference chapter about JavaScript functions to get to know the details.</p>
     </div>
-    <div>
-      <h2>Arguments</h2>
-      <p>An argument of a function is a specific input in the function, also known as an independent variable. The argument object contains an array of the arguments used when the function was called (invoked).</p>
+    <div class="panel">
+      <h2 class="panel-title">Arguments</h2>
+      <p class="panel-body">An argument of a function is a specific input in the function, also known as an independent variable. The argument object contains an array of the arguments used when the function was called (invoked).</p>
     </div>
-    <div>
-      <h2>Parameters</h2>
-      <p>Parameter is variable in the declaration of function.</p>
+    <div class="panel">
+      <h2 class="panel-title">Parameters</h2>
+      <p class="panel-body">Parameter is variable in the declaration of function.</p>
     </div>
   </body>
 </html>
