add font styles and background image

--- a/index.html
+++ b/index.html
@@ -5,30 +5,53 @@
     <link rel="stylesheet" href="css/styles.css" type="text/css">
     <script src="js/jquery-3.3.1.js"></script>
     <script src="js/scripts.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Indie+Flower|Shadows+Into+Light" rel="stylesheet">
     <meta charset="utf-8">
     <title>Javascript and Jquery Flashcards</title>
   </head>
   <body class="container">
     <h1>Javascript and Jquery Flashcards</h1>
-    <div class="panel">
-      <h2 class="panel-title">Operators</h2>
-      <p class="panel-body">JavaScript operators are used to assign values, compare values, perform arithmetic operations, and more.</p>
-    </div>
-    <div class="panel">
-      <h2 class="panel-title">Variables</h2>
-      <p class="panel-body">JavaScript variables are containers for storing data values.</p>
-    </div>
-    <div class="panel">
-      <h2 class="panel-title">Functions</h2>
-      <p class="panel-body">A function is a JavaScript procedure—a set of statements that performs a task or calculates a value. To use a function, you must define it somewhere in the scope from which you wish to call it. See also the exhaustive reference chapter about JavaScript functions to get to know the details.</p>
-    </div>
-    <div class="panel">
-      <h2 class="panel-title">Arguments</h2>
-      <p class="panel-body">An argument of a function is a specific input in the function, also known as an independent variable. The argument object contains an array of the arguments used when the function was called (invoked).</p>
-    </div>
-    <div class="panel">
-      <h2 class="panel-title">Parameters</h2>
-      <p class="panel-body">Parameter is variable in the declaration of function.</p>
+    <div class="row">
+      <div class="panel col-md-5">
+        <h2 class="panel-title">Operators</h2>
+        <p class="panel-body">JavaScript operators are used to assign values, compare values, perform arithmetic operations, and more.</p>
+      </div>
+      <div class="panel col-md-5">
+        <h2 class="panel-title">Variables</h2>
+        <p class="panel-body">JavaScript variables are containers for storing data values.</p>
+      </div>
+      <div class="panel col-md-5">
+        <h2 class="panel-title">Functions</h2>
+        <p class="panel-body">A function is a JavaScript procedure—a set of statements that performs a task or calculates a value. To use a function, you must define it somewhere in the scope from which you wish to call it. See also the exhaustive reference chapter about JavaScript functions to get to know the details.</p>
+      </div>
+      <div class="panel col-md-5">
+        <h2 class="panel-title">Arguments</h2>
+        <p class="panel-body">An argument of a function is a specific input in the function, also known as an independent variable. The argument object contains an array of the arguments used when the function was called (invoked).</p>
+      </div>
+      <div class="panel col-md-5">
+        <h2 class="panel-title">Parameters</h2>
+        <p class="panel-body">Parameter is variable in the declaration of function.</p>
+      </div>
+      <div class="panel col-md-5">
+        <h2 class="panel-title">Operators</h2>
+        <p class="panel-body">JavaScript operators are used to assign values, compare values, perform arithmetic operations, and more.</p>
+      </div>
+      <div class="panel col-md-5">
+        <h2 class="panel-title">Variables</h2>
+        <p class="panel-body">JavaScript variables are containers for storing data values.</p>
+      </div>
+      <div class="panel col-md-5">
+        <h2 class="panel-title">Functions</h2>
+        <p class="panel-body">A function is a JavaScript procedure—a set of statements that performs a task or calculates a value. To use a function, you must define it somewhere in the scope from which you wish to call it. See also the exhaustive reference chapter about JavaScript functions to get to know the details.</p>
+      </div>
+      <div class="panel col-md-5">
+        <h2 class="panel-title">Arguments</h2>
+        <p class="panel-body">An argument of a function is a specific input in the function, also known as an independent variable. The argument object contains an array of the arguments used when the function was called (invoked).</p>
+      </div>
+      <div class="panel col-md-5">
+        <h2 class="panel-title">Parameters</h2>
+        <p class="panel-body">Parameter is variable in the declaration of function.</p>
+      </div>
     </div>
   </body>
 </html>
