--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
       </div>
       <div class="panel col-md-5">
         <h2 class="panel-title">Functions</h2>
-        <p class="panel-body">A function is a JavaScript procedure—a set of statements that performs a task or calculates a value. To use a function, you must define it somewhere in the scope from which you wish to call it. See also the exhaustive reference chapter about JavaScript functions to get to know the details.</p>
+        <p class="panel-body">A function is a JavaScript procedure—a set of statements that performs a task or calculates a value.</p>
       </div>
       <div class="panel col-md-5">
         <h2 class="panel-title">Arguments</h2>
@@ -42,7 +42,7 @@
       </div>
       <div class="panel col-md-5">
         <h2 class="panel-title">Functions</h2>
-        <p class="panel-body">A function is a JavaScript procedure—a set of statements that performs a task or calculates a value. To use a function, you must define it somewhere in the scope from which you wish to call it. See also the exhaustive reference chapter about JavaScript functions to get to know the details.</p>
+        <p class="panel-body">A function is a JavaScript procedure—a set of statements that performs a task or calculates a value.</p>
       </div>
       <div class="panel col-md-5">
         <h2 class="panel-title">Arguments</h2>
