add text content adjust css

--- a/index.html
+++ b/index.html
@@ -7,50 +7,50 @@
     <script src="js/scripts.js"></script>
     <link href="https://fonts.googleapis.com/css?family=Cabin+Sketch|Indie+Flower|Shadows+Into+Light" rel="stylesheet">
     <meta charset="utf-8">
-    <title>Javascript and Jquery Flashcards</title>
+    <title>JavaScript and jQuery Flashcards</title>
   </head>
   <body class="container">
-    <h1>Javascript and Jquery Flashcards</h1>
+    <h1>JavaScript and jQuery Flashcards</h1>
     <div class="row">
-      <div class="panel col-md-5">
+      <div class="panel col-xs-5">
         <h2 class="panel-title">Operators</h2>
         <p class="panel-body">JavaScript operators are used to assign values, compare values, perform arithmetic operations, and more.</p>
       </div>
-      <div class="panel col-md-5">
+      <div class="panel col-xs-5">
         <h2 class="panel-title">Variables</h2>
         <p class="panel-body">JavaScript variables are containers for storing data values.</p>
       </div>
-      <div class="panel col-md-5">
+      <div class="panel col-xs-5">
         <h2 class="panel-title">Functions</h2>
         <p class="panel-body">A function is a JavaScript procedure—a set of statements that performs a task or calculates a value.</p>
       </div>
-      <div class="panel col-md-5">
+      <div class="panel col-xs-5">
         <h2 class="panel-title">Arguments</h2>
         <p class="panel-body">An argument of a function is a specific input in the function, also known as an independent variable. The argument object contains an array of the arguments used when the function was called (invoked).</p>
       </div>
-      <div class="panel col-md-5">
+      <div class="panel col-xs-5">
         <h2 class="panel-title">Parameters</h2>
         <p class="panel-body">Parameter is variable in the declaration of function.</p>
       </div>
-      <div class="panel col-md-5">
-        <h2 class="panel-title">Operators</h2>
-        <p class="panel-body">JavaScript operators are used to assign values, compare values, perform arithmetic operations, and more.</p>
+      <div class="panel col-xs-5">
+        <h2 class="panel-title">Return</h2>
+        <p class="panel-body">The return statement ends function execution and specifies a value to be returned to the function caller.</p>
       </div>
-      <div class="panel col-md-5">
-        <h2 class="panel-title">Variables</h2>
-        <p class="panel-body">JavaScript variables are containers for storing data values.</p>
+      <div class="panel col-xs-5">
+        <h2 class="panel-title">Chaining Methods</h2>
+        <p class="panel-body">Chaining Methods, also known as Cascading, refers to repeatedly calling one method after another on an object, in one continuous line of code.</p>
       </div>
-      <div class="panel col-md-5">
-        <h2 class="panel-title">Functions</h2>
-        <p class="panel-body">A function is a JavaScript procedure—a set of statements that performs a task or calculates a value.</p>
+      <div class="panel col-xs-5">
+        <h2 class="panel-title">Strings</h2>
+        <p class="panel-body">JavaScript strings are used for storing and manipulating text.</p>
       </div>
-      <div class="panel col-md-5">
-        <h2 class="panel-title">Arguments</h2>
-        <p class="panel-body">An argument of a function is a specific input in the function, also known as an independent variable. The argument object contains an array of the arguments used when the function was called (invoked).</p>
+      <div class="panel col-xs-5">
+        <h2 class="panel-title">Booleans</h2>
+        <p class="panel-body">A JavaScript Boolean represents one of two values: true or false.</p>
       </div>
-      <div class="panel col-md-5">
-        <h2 class="panel-title">Parameters</h2>
-        <p class="panel-body">Parameter is variable in the declaration of function.</p>
+      <div class="panel col-xs-5">
+        <h2 class="panel-title">Alert</h2>
+        <p class="panel-body">The alert() method displays an alert box with a specified message and an OK button.</p>
       </div>
     </div>
   </body>
